release 1.0.3 (2009-03/04)
- Fixed issue 225
  https://jersey.dev.java.net/issues/show_bug.cgi?id=225
  Niall Gallagher contributed support for the Simple HTTP server
  integration with Jersey. See the JavaDoc for the following in the
  jersey-simple-server module:
    com.sun.jersey.simple.container.SimpleServerFactory
- Fixed issue 122
  https://jersey.dev.java.net/issues/show_bug.cgi?id=122
  When the ServletContainer is used as a filter then the init-param
  property "com.sun.jersey.config.property.WebPageContentRegex" may
  used to declare a regex to match against the request path. If the
  path matches then the requets is forwarded to the next filter (if any)
  in the filter chain and Jersey will not process the request.
  For example if you set the value to "/(image|css)/.*" then you can serve up
  images and CSS files for your Implicit or Explicit Views while still
  processing your JAX-RS resources.
- Added the annotation com.sun.jersey.multipart.FormDataParam for
  processing parameters that are named body parts of "multipart/form-data"
  messages. This functionality replaces the overloaded use of @FormParam,
  and such functionaity for processing "multipart/form-data" will be
  deprecated.
- Fixed issue 236
  https://jersey.dev.java.net/issues/show_bug.cgi?id=236
  Multiple named body parts of a "multipart/form-data" message can be accessed
  as follows:
    @Path("form-data")
    @Consumes(MediaType.MULTIPART_FORM_DATA)
    @POST
    public void uploadUrlFormData(
            @FormDataParam("file") List<FormDataBodyPart> parts) {
        for (FormDataBodyPart part : parts) {
            FormDataContentDisposition disp = part.
                    getFormDataContentDisposition();
            InputStream in = part.getValueAs(InputStream.class);
            ...
        }
    }
- Fixed issue 238
  https://jersey.dev.java.net/issues/show_bug.cgi?id=238
  The MIME multipart processing performed by the jersey-multipart module